<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/billTotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="18dp"
        android:background="#02bf02"
        android:padding="2dp"
        android:text="@string/bill_total"
        android:layout_marginLeft="10dp"
        android:textAllCaps="true"
        android:textSize="14sp" />
    <EditText
        android:id="@+id/etTotalAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="25dp"
        android:background="#00000000"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/total_hint"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="#02bf02"
        android:textSize="48sp" >
 	    <requestFocus />
 	 </EditText>

    <RelativeLayout
        android:id="@+id/container2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etTotalAmt"
        android:padding="10dp" >

	    <TextView
	        android:id="@+id/tipLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginBottom="5dp"
	        android:layout_marginTop="18dp"
	        android:background="#02bf02"
	        android:padding="2dp"
	        android:text="@string/tip_percentage"
	        android:textAllCaps="true"
	        android:textSize="14sp" />
	
	    <RadioGroup
	        android:id="@+id/rgTip"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/tipLabel"
	        android:orientation="horizontal" >
	
	        <RadioButton
	            android:id="@+id/tenPercent"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:checked="true"
	            android:text="@string/10_percent"
	            android:textSize="14sp" />
	
	        <RadioButton
	            android:id="@+id/fifteenPercent"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/15_percent"
	            android:textSize="14sp" />
	
	        <RadioButton
	            android:id="@+id/twentyPercent"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/20_percent"
	            android:textSize="14sp" />

	    </RadioGroup>
	    
	    <TextView
	        android:id="@+id/orLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/etCustomTip"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_toRightOf="@+id/rgTip"
	        android:paddingBottom="5dp"
	        android:text="@string/or"
	        android:textAlignment="center" />
	    
	     <TextView
	         android:id="@+id/numPeopleLabel"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_alignParentLeft="true"
	         android:layout_below="@+id/rgTip"
	         android:layout_marginBottom="10dp"
	         android:layout_marginTop="21dp"
	         android:background="#02bf02"
	         android:padding="2dp"
	         android:text="@string/num_people"
	         android:textAllCaps="true"
	         android:textSize="14sp"/>

	     <TextView
	         android:id="@+id/tvNumPeople"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_alignBaseline="@+id/numPeopleLabel"
	         android:layout_alignBottom="@+id/numPeopleLabel"
	         android:layout_marginLeft="5dp"
	         android:layout_toRightOf="@+id/numPeopleLabel"
	         android:text="@string/one"
	         android:textSize="14sp" />
	
	    <SeekBar
	        android:id="@+id/sbNumPeople"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/numPeopleLabel" />

	    <EditText
	        android:id="@+id/etCustomTip"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/rgTip"
	        android:layout_toRightOf="@+id/orLabel"
	        android:ems="10"
	        android:inputType="numberDecimal" >

	    </EditText>

	    <TextView
	        android:id="@+id/customTipLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_above="@+id/etCustomTip"
	        android:layout_alignLeft="@+id/etCustomTip"
	        android:text="@string/custom_tip"
	        android:textAlignment="center"
	        android:textColor="#02bf02"/>

    </RelativeLayout>

	<RelativeLayout
	    android:id="@+id/container3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/container2"
	    android:padding="10dp" >
	    
	    <TextView
	        android:id="@+id/tipTotalLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:text="@string/tip_total_label"
	        android:textSize="14sp" 
	        android:textAllCaps="true"
	        android:background="#02bf02"
	        android:layout_marginBottom="5dp"
	        android:padding="2dp" />
	
	    <TextView
	        android:id="@+id/tvTotalTip"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/tipTotalLabel"
	        android:layout_alignBottom="@+id/tipTotalLabel"
	        android:layout_marginLeft="10dp"
	        android:layout_toRightOf="@+id/tipTotalLabel" />
	
	    <TextView
	        android:id="@+id/totalLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/tvTotalTip"
	        android:text="@string/total_label"
	        android:textSize="14sp" 
	        android:textAllCaps="true"
	        android:background="#02bf02"
	        android:layout_marginBottom="5dp"
	        android:layout_marginTop="5dp"
	        android:padding="2dp"/>
	
	    <TextView
	        android:id="@+id/tvTotalAmount"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/totalLabel"
	        android:layout_alignBottom="@+id/totalLabel"
	        android:layout_toRightOf="@+id/totalLabel"
	        android:layout_marginLeft="10dp" />
	
	    <TextView
	        android:id="@+id/tvTotalPerPerson"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/totalLabel"
	        android:text="@string/total_per_person_label"
	        android:textSize="14sp" 
	        android:textAllCaps="true"
	        android:background="#02bf02"
	        android:padding="2dp"/>
	
	    <TextView
	        android:id="@+id/tvTotalPerPersonAmt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/tvTotalPerPerson"
	        android:layout_alignBottom="@+id/tvTotalPerPerson"
	        android:layout_toRightOf="@+id/tvTotalPerPerson" 
	        android:layout_marginLeft="10dp"/>
	</RelativeLayout>

</RelativeLayout>